fixed non-scrolly information if text goes off screen - spun off image or thirdparty video player component to it's own file

--- a/styles/Viewer.module.css
+++ b/styles/Viewer.module.css
@@ -28,7 +28,7 @@
   background: rgba(41, 41, 41, 0.8);
   opacity: 0.0;
   transition: 1s;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 
 .articleVisible {
